--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,8 +29,8 @@
           <a class="nav-link" href="{{ url_for('signup') }}">Sign Up</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" action="{{ url_for('search') }}">
+        <input class="form-control mr-sm-2" name="search_query" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
