--- a/templates/error.html
+++ b/templates/error.html
@@ -1,7 +1,8 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <h1>Error occurred</h1>
-
-    {{ message }}
+  <h1>Error occurred</h1>
+<div class="alert alert-danger">
+{{ message }}
+</div>
 {% endblock %}
